# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.10 ==
 * Pass a default MA to the xml-signer tool (#972)

== 2.9 ==
 * Remove hardcoded URNs (#10)
 * Add mailto link for help on error-text page (#921)
 * Undo changes that caused a logout on insufficient attributes (#939)
 * Allow anonymous RSpecs (#957)
 * Support speaks-for in logging API (#966)
 * Support Federation API v2 (#967)

== 2.8 ==
   * Ensure max date in slice renew datepicker is by project
     expiration not slice expiration. Also, make project expirations
     with no time be end of day not beginning. (953)
   * Use the new Flack loader to run Flack (955)
   * On slice page, warn when acting on all aggregates (959)
   * Update copyright in tool-aggwarning.php (960)
   * Show project and slice names in proper case (961)
   * Eliminate HTTP_HOST from map files by using relative URLs (962)
   * Add confirm dialog when renewing resources on a slice (963)

== 2.7 ==
   * Add text box to project bulk add page (#516)
   * Add iRODS username and zone to OpenID data exchange (#937)
   * Remove unnecessary reliance on a global variable (#917)
   * Handle case where someone invites another person to join a project twice (#380)
   * Update copyright notices to 2014 (#945)
   * User is caller of log service in most cases, not portal (#568)
   * Update to latest iRODS server cert (#947)
   * Fix URN of ION AM in Service Registry (#948)
   * Code cleanup in handle-project-request: (#926)
    * Check requests are valid, user not already in project, no duplicate requests  (#410)
    * Support multiple requests on one page (#376)
    * Add an Ignore option
    * Add optional text for emails to added or rejected requests (#876)
   * Change logging service calls to not pass the author account id. (#951)