@@ -41,13 +41,13 @@ handlers=fileHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=defaultConsoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
-level=INFO
+level=DEBUG
 formatter=detailFormatter
 ; Set variable using --logoutput 
 args=('%(logfilename)s','w')
